--- a/src/docinfo.html
+++ b/src/docinfo.html
@@ -1,26 +1,24 @@
 <meta
 	name="keywords"
-	content="asciidoctor, template, pitch black, jet black, black, adoc, dark mode"
+	content="git internals, git, git_internals, git_basics, harsh kapadia"
 />
-<meta name="description" content="A jet black Asciidoctor template." />
+<meta name="description" content="Exploring the internals of Git" />
 <meta name="theme-color" content="#000000" />
-<meta property="og:site_name" content="Asciidoctor Jet" />
-<meta property="og:title" content="Asciidoctor Jet" />
+<meta property="og:site_name" content="Git Internals" />
+<meta property="og:title" content="Git Internals" />
 <meta property="og:type" content="website" />
-<meta property="og:description" content="A jet black Asciidoctor template." />
-<meta
-	property="og:url"
-	content="https://harshkapadia2.github.io/asciidoctor-jet"
-/>
+<meta property="og:description" content="Exploring the internals of Git" />
+<meta property="og:url" content="https://git.harshkapadia.me" />
 <meta
 	property="og:image"
-	content="https://harshkapadia2.github.io/asciidoctor-jet/static/img/icon-512.png"
+	content="https://git.harshkapadia.me/static/img/og-img.png"
 />
-<meta property="og:image:width" content="512" />
-<meta property="og:image:height" content="512" />
+<meta property="og:image:width" content="1800" />
+<meta property="og:image:height" content="900" />
+<meta property="twitter:card" content="summary_large_image" />
 <meta
 	property="twitter:image"
-	content="https://harshkapadia2.github.io/asciidoctor-jet/static/img/icon-512.png"
+	content="https://git.harshkapadia.me/static/img/og-img.png"
 />
 
 <script defer src="static/js/script.js"></script>
@@ -34,6 +32,9 @@
 
 <link rel="stylesheet" href="static/css/style.css" />
 
-<link rel="apple-touch-icon" href="static/img/icon-192.png" />
+<link
+	rel="apple-touch-icon"
+	href="https://git.harshkapadia.me/static/img/icon-192.png"
+/>
 
 <link rel="manifest" href="manifest.webmanifest" />
